assets/sass/components/settings/_googlesitekit-settings-module.scss
/**
 * Settings module styles.
 *
 * Site Kit by Google, Copyright 2021 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.googlesitekit-plugin {

	.googlesitekit-settings-module {
		border-bottom: 1px solid $c-border-light;
		position: relative;

		&--error {
			border: 3px solid $c-error;
		}

		.googlesitekit-settings-module__status {
			align-items: center;
			color: $c-surfaces-on-surface;
			display: flex;
			font-size: $fs-body-md;
			font-weight: $fw-medium;
			letter-spacing: $ls-s;
			line-height: $lh-body-md;
			margin: 0;
			text-align: right;
		}

		.googlesitekit-settings-module__status--not-connected {
			color: $c-utility-warning;
		}

		.googlesitekit-settings-module__status-icon {
			color: $c-utility-success;
			margin-left: $grid-gap-phone;

			&::before {
				background-position: center center;
				background-repeat: no-repeat;
				border-radius: 50%;
				content: "";
				display: inline-block;
				height: 19px;
				vertical-align: middle;
				width: 19px;
			}

			&--connected::before {
				background-color: $c-success;
				background-image: $icon-checked;
				background-size: 10px 8px;
			}

			&--not-connected::before,
			&--warning::before {
				background-color: $c-white;
				background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2222%22%20height%3D%2219%22%20viewBox%3D%220%200%2022%2019%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M0%2019h22L11%200%200%2019zm12-3h-2v-2h2v2zm0-4h-2V8h2v4z%22%20fill%3D%22%23FECE72%22%20fill-rule%3D%22nonzero%22%2F%3E%3C%2Fsvg%3E");
				background-position: center 3px;
				background-size: 19px 17px;
				height: 26px;
				width: 26px;
			}
		}

		.googlesitekit-settings-module__header {
			cursor: pointer;
			display: block;
			padding: 0 ($grid-gap-phone * 2) 0 0;
			position: relative;
			width: 100%;

			&:hover {
				text-decoration: none;
			}

			&:focus {
				outline-offset: 0;
			}

			&::after {
				background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2212%22%20height%3D%228%22%20viewBox%3D%220%200%2012%208%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M10.6.6L12%202%206%208%200%202%201.4.6%206%205.2z%22%20fill%3D%22%235B5B61%22%20fill-rule%3D%22evenodd%22%2F%3E%3C%2Fsvg%3E");
				background-position: center center;
				background-repeat: no-repeat;
				content: "";
				display: block;
				height: 20px;
				position: absolute;
				right: $grid-gap-phone;
				top: 50%;
				transform: translateY(-50%);
				width: 20px;
			}

			&--open::after {
				transform: translateY(-50%) rotate(180deg);
			}

			.mdc-button {
				background-color: $c-surfaces-surface-2;
				color: $c-surfaces-on-surface;
				font-weight: $fw-medium;
			}

			.googlesitekit-settings-module__status {

				p {
					margin: 0;
				}
			}

			.googlesitekit-settings-module__status--connected {
				padding: 8px 0;
			}

			.googlesitekit-settings-module__status--not-connected {

				.mdc-button {
					margin: -1.5px 0;
				}
			}

			.googlesitekit-settings-module__status--loading {
				align-items: center;
				display: flex;
				min-width: 150px;
				padding: 0.5px 0;
			}
		}

		.googlesitekit-settings-module__content {
			border-top: 1px solid $c-utility-divider;
			display: none;

			&--open {
				display: block;
			}

			.mdc-layout-grid__cell {
				font-size: $fs-body-md;
				letter-spacing: $ls-s;
				line-height: $lh-body-md;
			}
		}

		.googlesitekit-settings-module__heading {
			align-items: center;
			display: flex;
			flex-wrap: wrap;
			row-gap: 12px;
		}

		.googlesitekit-settings-module__title {
			align-items: center;
			display: flex;
			font-size: $fs-title-md;
			line-height: $lh-title-md;
			margin: 0;
		}

		.googlesitekit-settings-module__heading-icon {
			height: auto;
			margin-right: $grid-gap-phone;
			width: 24px;
		}

		.googlesitekit-settings-module__heading-badges {
			align-items: center;
			display: flex;
			flex-wrap: wrap;
			row-gap: 12px;
		}

		.googlesitekit-settings-module__footer-cancel {
			margin-left: $grid-gap-desktop;
		}

		.googlesitekit-settings-module__meta-header {
			margin: 0 0 8px;
		}

		.googlesitekit-settings-module__fields-group {
			border-bottom: 1px solid $c-mercury;
			margin-bottom: 1em;

			&:last-child {
				border-bottom: none;
				margin-bottom: 0;
			}
		}

		.googlesitekit-settings-module__meta-items {
			align-items: stretch;
			display: flex;
			flex-wrap: wrap;
			margin: 0;
		}

		.googlesitekit-settings-module__meta-select {
			margin: 0 $grid-gap-phone $grid-gap-phone 0;

			@media (min-width: $bp-desktop) {
				margin: 0 $grid-gap-desktop $grid-gap-desktop 0;
			}
		}

		.googlesitekit-settings-module__meta-item {
			margin: 0 ($grid-gap-phone * 2) $grid-gap-phone 0;
			width: 100%;

			@media (min-width: $bp-tablet) {
				width: auto;
			}

			@media (min-width: $bp-desktop) {
				margin: 0 ($grid-gap-desktop * 2) $grid-gap-desktop 0;
			}

			&--data-only {
				align-items: flex-end;
				display: flex;
			}

			&--nomargin {
				margin: 0;
			}
		}

		.googlesitekit-setup-module--analytics .googlesitekit-settings-module__meta-item--data-only {
			margin-top: -$grid-gap-phone;

			@media (min-width: $bp-tablet) {
				margin-top: 0;
			}
		}

		.googlesitekit-settings-module__inline-items {
			display: flex;
			flex-wrap: wrap;
		}

		.googlesitekit-settings-module__inline-item {
			margin: 0 1rem 1rem 0;
		}

		.googlesitekit-settings-module__meta-item-type {
			color: $c-primary;
			font-size: $fs-body-sm;
			font-weight: $fw-bold;
			letter-spacing: $ls-xs;
			line-height: $lh-body-sm;
			margin: 0 0 8px;
		}

		.googlesitekit-settings-module__meta-item-data {
			color: $c-surfaces-on-surface;
			font-size: $fs-body-md;
			letter-spacing: $ls-s;
			line-height: $lh-body-md;
			margin: 0;

			&--wrap {
				word-break: break-all;
			}

			&--tiny {
				font-size: $fs-body-sm;
				font-weight: $fw-normal;
				letter-spacing: $ls-xs;
				line-height: $lh-body-sm;
			}
		}

		.googlesitekit-settings-module__meta-item-info {
			color: $c-user-input-note;
			font-size: 0.75rem;
		}

		.googlesitekit-settings-module__edit-button-icon,
		.googlesitekit-settings-module__remove-button-icon {
			margin-left: $grid-gap-phone;
		}

		.googlesitekit-settings-module__edit-button-icon {

			svg {
				color: $c-cornflower-blue;
			}
		}

		.googlesitekit-settings-module__remove-button-icon {
			color: $c-cinnabar;
		}

		.googlesitekit-settings-module__remove-button {
			align-items: center;
			display: flex;
		}

		.googlesitekit-settings-module__error {
			background-color: $c-error;
			color: $c-base;
			font-weight: $fw-bold;
		}

		.googlesitekit-settings-module__apikey-cancel {
			font-size: $fs-body-sm;
			letter-spacing: $ls-xs;
			margin-left: 24px;
		}
	}
}

